# axum_backend_2

./: Cargo.toml
src/: main.rs
src/appstate_mod/: mod.rs
src/constants_mod/: mod.rs
src/error_mod/: mod.rs
src/model_controller/: mod.rs
src/model_controller/sales_order_impl_mod/: get_sales_order_impl_mod.rs  mod.rs  post_sales_order_impl_mod.rs
src/mw_mod/: mod.rs  mw_auth_mod.rs
src/routers/: mod.rs
src/routers/login_router_mod/: handler_mod.rs  mod.rs  models_mod.rs
src/routers/sales_order_router_mod/: mod.rs  model_mod.rs
src/routers/sales_order_router_mod/get_router_mod/: handler_mod.rs  mod.rs  model_mod.rs  trait_mod.rs
src/routers/sales_order_router_mod/post_router_mod/: handler_mod.rs  mod.rs  trait_mod.rs
src/routers/test_router_mod/: handler_mod.rs  mod.rs
