[package]
name = "axum_backend_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
lazy-regex = "3.1.0"
odbc-api = "4.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum_macros = "0.25.3"
tokio = { version = "1.35.0", features = ["full"] }
tower-cookies = "0.10.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
